assets/css/style.css
/* Google font imports */
@import url('https://fonts.googleapis.com/css2?family=Athiti&family=Hind+Madurai:wght@700&family=Petrona:wght@500&display=swap');

/* Astrisk override to override all default styles */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles*/
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles*/
    color: darkslategray;
    font-family: 'Athiti', sans-serif;
    background-color: #f8f8ff;
    margin-left: auto;
    margin-right: auto;
}

h1, h2 {
    font-family: 'Hind Madurai', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
}

h1 {
    color: #ffffff;
}

h2 {
    color: #303A97;
    padding-top: 15px;
    padding-left: 10px;
}

h4 {
    font-family: 'Hind Madurai', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #ffffff;
    padding-top: 20px;
}

p {
    padding: 7px;
}

.bold {
    font-weight: bold;
}

/* Header */
header {
    background-color: #542875;
    padding: 0 16px;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 1px 1px #542875;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: #ffffff;
}

/* Nav */
#menu {
    font-size: 1.1rem;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu>li {
    margin-bottom: 16px;
    text-transform: uppercase;
}

.active {
    border-bottom: 1px solid #ffffff
}

/* Navbar style with dropdown toggle */
nav {
    position: absolute;
    background-color: #542875;
    width: 100%;
    left: 0;
    padding: 0 16px;
    box-shadow: 0 2px 2px #ffffff;
    display: none;
    top: 100%;
}

/* Nav Toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main */
main {
    flex: 1 0 auto;
    margin-top: 73px;
}

/* Hero Section */

#hero1 {
    height: 500px;
    width: auto;
    background: url("../images/index/index_hero.webp") no-repeat center center / cover;
}

#hero-text {
    padding-top: 75px;
    padding-left: 5px;
    padding-right: 5px;
    color: #ffffff;
    text-transform: uppercase;
    font-size: 2rem;
    font-family: 'Hind Madurai', sans-serif;
    text-align: center;
    margin-bottom: 25px;
}

#hero-text-body {
    color: #ffffff;
    font-size: 2rem;
    text-align: center;
    font-family: 'Athiti', sans-serif;
    font-size: 1.125rem;
    text-transform: none;
    margin-bottom: 30px;
    padding-left: 10%;
    padding-right: 10%;
}

#hero-services {
    font-weight: bold;
    color: #ffffff;
    text-align: center;
    text-transform: uppercase;
    font-size: 1.25rem;
    margin-bottom: 30px;
}

a.hero-button {
    padding: 15px 20px;
    background-color: #542875;
    color: white;
    border: none;
    border-radius: 5px;
    font-size: 1.25rem;
    text-transform: uppercase;
    font-family: 'Hind Madurai', sans-serif;
    align-items: center;
    text-decoration: none;
    margin: 0 auto;
    display: block;
    width: 150px;
    text-align: center;
}

/* Page section Index*/

.elna-container {
    margin: 5px;
}

.elna-image {
    max-width: 350px;
    max-height: 100%;
    padding: 25px;
    float: left;
}

.why-vedic {
    text-transform: uppercase;
    color: #303A97;
    padding-left: 10px;
    font-family: 'Hind Madurai', sans-serif;
    letter-spacing: 2px;
    padding-top: 1%;
}

.about-elna p {
    color: #2f4f4f;
    padding-left: 10px;
}

.jyotish {
    color: #542875;
}

/* Page section FAQs*/

.faqs-section {
    background-color: #f8f8ff;
    padding-top: 85px;
}

.faqs-style {
    color: #303A97;
    text-align: center;
}

.consultation-heading {
    font-family: 'Hind Madurai', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #303A97;
}

.consultation-heading-h3 {
    font-family: 'Hind Madurai', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #303A97;
    padding-top: 20px;
}

.faqs-layout {
    width: auto;
    margin: auto;
    padding: 10px;
}

.accordion {
    padding: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
    background: #ffffff;
    border-radius: 10px;
}

.accordion-question p {
    margin: 5px;
    padding: 0;
    font-family: 'Athiti', sans-serif;
    font-size: 1.25rem;
}

.accordion-answer p {
    margin: 5px;
    padding: 10px;
    font-size: large;
    font-family: 'Athiti', sans-serif;
    color: #ffffff;
    background: #542875;
    border-radius: 10px;
}

.accordion:hover {
    cursor: pointer;
}

.accordion-answer {
    display: none;
}

.accordion.active .accordion-answer {
    display: block;
}

/* Faqs Festivals and Fasts Section */

#festivals-fasts {
    text-align: center;
    padding-top: 10px;
}

#times {
    background: url('../images/faqs/faqs_footer.webp') no-repeat center/cover;
    /* Handles responsivity without the need for a media query */
}

#times div {
    color: #fafafa;
    background-color: rgba(0, 0, 0, .6);
    padding: 15px;
    text-align: center;
    /* This will not wrap on screens of less than 400px wide.
    Each div will expand to fill the available space on its row */
    flex-basis: auto;
    flex-grow: 1;
    /* Creates a grid of meetup time divs over the background image */
    border: 2px solid white;
}

#times h3 {
    /* Override the heading colour set in general styles */
    color: #fafafa;
}

/* Page section Book*/

#background-book-page {
    background-image: url("../images/book/book_background.webp");
    background-size: cover;
    background-position: 75%;
    padding: 20px 10% 20px 10%;
    flex-grow: 1;
}

#book-now {
    text-align: center;
}

#book-now-reading {
    padding-left: 20px;
}

form {
    width: auto;
    margin-top: 25px;
    background-color: #ffffff;
    margin: auto;
    border-radius: 10px;
    padding: 15px;
}

fieldset {
    display: block;
    margin-inline-start: 2px;
    margin-inline-end: 2px;
    padding-block-start: 5px;
    padding-inline-start: 12px;
    padding-inline-end: 12px;
    padding-block-end: 10px;
    min-inline-size: min-content;
    border: none;
    margin-top: 20px;
}

input {
    padding: 15px;
    font-family: 'Athiti', sans-serif;
    font-size: inherit;
    width: 200px;
}

textarea {
    padding: 15px;
    font-family: 'Athiti', sans-serif;
    font-size: inherit;
    width: 200px;
    width: 300px;
    height: 250px;
}

.block-label {
    display: block;
    color: #542875;
    font-family: 'Hind Madurai', sans-serif;
    font-size: 0.94rem;
    padding: 15px 0px 5px 0px;
}

.submit-button {
    display: block;
    background-color: #542875;
    font-family: 'Hind Madurai', sans-serif;
    font-size: 0.94rem;
    margin-left: 15px;
    color: white;
    border: none;
    border-radius: 5px;
    text-transform: uppercase;
}

.gap-20 {
    gap: 20px;
}

.consultation-list {
    padding-left: 20px;
}

.consultation-list {
    padding-left: 20px;
}

.consultation-list li strong {
    color: #542875;
}

.consultation-disclaimer {
    color: #542875;
    text-align: center;
}
/* Footer */

footer {
    background-color: #303A97;
    color: #ffffff;
    font-size: 1.2rem;
    text-align: center;
    letter-spacing: 2px;
}

#social-logos {
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 5px;
    padding-bottom: 5px;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-logos i {
    font-size: 2rem;
    padding: 5%;
}

.fa-brands {
    color: #ffffff;
}

.fa-regular {
    color: #ffffff;
}

/* Sizing of logo */
#logo {
    font-size: 1.75rem;
    line-height: 75px;
    margin: 0 8px;
}

/* Media query: mobile smaller than 280px */
@media screen and (max-width: 300px) {

    /* H2 Adjustment */
    .consultation-heading {
        font-size: medium;
    }
    form {
        padding-top: 50px;
    }
}

/* Media query: mobile smaller than 450px */
@media screen and (max-width: 450px) {

    /* H2 Adjustment */
    .consultation-heading {
        font-size: medium;
    }
    form {
        padding-top: 50px;
    }
    textarea {
        width: 200px;
        height: 125px;
    }
    #hero1 {
        height: 600px;
}
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 16px;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 16px;
    }

    .nav-toggle-label {
        display: none
    }

    #hero1 {
        display: flex;
    }

    #hero-text-body {
        padding-left: 30%;
        padding-right: 30%;
    }

    .elna-container {
        display: flex;
        margin: 5px;
    }

    .elna-image {
        max-width: 450px;
        max-height: 100%;
        padding: 25px;
        float: left;
    }
    
    .elna-column1 {
        flex: 30%;
        padding-top: 10px;
        padding-left: 25px;
        height: auto;
    }
    
    .elna-column2 {
        flex: 70%;
        padding-right: 15px;
        padding-top: 30px;
        height: auto;
    }
    
    .faqs-layout {
        width: auto;
        margin: auto;
        padding: 10px;
    }
    #times {
        display: flex;
    }
    .faqs-section {
        padding-top: 25px;
    }

    .flex {
        display: flex;
    }
    textarea {
        width: 500px;
        height: 150px;
    }
}


/* Large devices (large desktops, 992px and up) */
@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid #ffffff;
    }

    .elna-container {
        display: flex;
        margin: 5px;
    }

    .elna-image {
        max-width: 560px;
        max-height: 676px;
        padding: 25px;
        float: none;
    }
    
    .elna-column1 {
        flex: 30%;
        padding-top: 10px;
        padding-left: 10px;
        height: auto;
    }
    
    .elna-column2 {
        flex: 70%;
        padding-top: 30px;
        padding-left: 10px;
        height: auto;
    }

    .faqs-layout {
        max-width: 1000px;
        margin: auto;
        padding: 10px;
    }
    #times {
        display: flex;
    }
    .faqs-section {
        padding-top: 25px;
    }
    form {
        max-width: 1000px;
    }
    
    .flex {
        display: flex;
    }
    textarea {
        width: 650px;
        height: 150px;
    }
}

